# video-editing-tools

./: .gitignore  .mcp.json  CHANGELOG.md  INSTALL.md  LICENSE  README.md
src/python/: MANIFEST.in  README.md  auto_caption.py  inventory.py  pyproject.toml  rate_footage.py  requirements.txt  setup.py  team_config.example.json  video_start.py
src/python/canva/: design.py
src/python/davinci/: generate-edl.py
src/python/descript/: mcp.py
src/python/docs/: examples.md  operations.md  resolve.md
src/python/elevenlabs/: voiceover.py
src/python/heygen/: avatar.py
src/python/videoedit/: __init__.py  _version.py  advanced.py  ai.py  calibration.py  captions.py  cli.py  cloud.py  config.py  content.py  diagnostics.py  edl.py  ffmpeg.py  inventory.py  learning.py  models.py  modules.py  operations.py  pipeline.py  presets.py  rating.py  reports.py  review.py  review_tui.py  roughcut.py  scaffold.py  selections.py  signals.py  simple_yaml.py  timecode.py  transcript.py
src/python/videoedit/operations/: __init__.py  audio_detect.py  audio_normalize.py  base.py  captions.py  concatenate.py  contact.py  edl.py  embed.py  events.py  extract.py  format.py  probe.py  quality.py  scene.py  transcribe.py  transcript_detect.py  transitions.py  vad.py
src/python/videoedit/presets/: ingest.yaml  reel.yaml  simple.yaml  youtube.yaml
src/python/videoedit/resolve/: __init__.py  api.py  otio_export.py  project.py  timeline.py
src/python/videoedit/shoot/: __init__.py  analyze.py  candidates.py  cli.py  db.py  photos.py  prompts.py  reports.py  review.py  runner.py  scanner.py  schemas.py
src/python/videoedit/tui/: __init__.py  app.py  styles.css
src/python/videoedit/tui/screens/: __init__.py  browser.py  builder.py  home.py  runner.py  (+1 more)
src/python/videoedit/utils/: __init__.py  progress.py
(+20 files in other folders)
